--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 glfw = {version="0.51.0", features=["vulkan"]}
 vulkano = "0.33.0"
+vulkano-win = "0.33.0"
+winit = "0.28.6"
 
 [immersion_control_engine.dev]
 opt-level = 1 
