--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,12 @@
 name = "immersion_control_engine"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 glfw = {version="0.51.0", features=["vulkan"]}
+shaderc = {version="0.8.2", features=["build-from-source"]}
+shaderc-sys = {version="0.8.2", features=["build-from-source"]}
 vulkano = "0.33.0"
 vulkano-shaders = "0.33.0"
 vulkano-win = "0.33.0"
